--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.6.8",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-icons": "^5.1.0",
+    "react-intl": "^6.6.5",
     "react-scripts": "5.0.1",
+    "sass": "^1.75.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
