--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://siffersari.github.io/Weatherwise",
+  "homepage": "https://siffersari.github.io/Weatherwise-App",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
